--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     />
      
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Dictionary App</title>
   </head>
   <body>
